add_executable(hornspec NonlinSolver.cpp)
target_include_directories(hornspec PRIVATE ${HORNSPEC_INCLUDE_DIRS})
target_link_libraries(hornspec PRIVATE ${Z3_LIBRARY} Boost::headers ${GMPXX_LIB} ${GMP_LIB})
if (OpenMP_FOUND)
  target_link_libraries(hornspec PRIVATE OpenMP::OpenMP_CXX)
endif()
install(TARGETS hornspec RUNTIME DESTINATION bin)
